icon update in Start page

--- a/ProfileMatch.Web/Pages/Index.razor
+++ b/ProfileMatch.Web/Pages/Index.razor
@@ -7,47 +7,50 @@
 
 <MudGrid Justify="Justify.Center">
     <MudItem>
-        <MudButton Variant="Variant.Filled" Color="Color.Primary" Style="width: 150px; height: 150px; margin-left: auto; margin-right: auto; " Link="user/dashboard" StartIcon="@Icons.Filled.FactCheck">Surveys</MudButton>
+        <MudButton Variant="Variant.Filled" Color="Color.Primary" Style="width: 190px; height: 190px; margin-left: auto; margin-right: auto; " Link="user/dashboard" ><MudIcon Icon="@Icons.Filled.FactCheck" Style="font-size: 4rem;" />Surveys</MudButton>
     </MudItem>
     <MudItem>
-        <MudButton Variant="Variant.Filled" Color="Color.Primary" Style="width: 150px; height: 150px; margin-left: auto; margin-right: auto;" StartIcon="@Icons.Filled.PersonOutline" Link="user/dashboard">Account</MudButton>
+        <MudButton Variant="Variant.Filled" Color="Color.Primary" Style="width: 190px; height: 190px; margin-left: auto; margin-right: auto;"  Link="user/dashboard"><MudIcon Icon="@Icons.Filled.PersonOutline" Style="font-size: 4rem;" />Account</MudButton>
     </MudItem>
     <MudItem>
-        <MudButton Variant="Variant.Filled" Color="Color.Primary" Style="width: 150px; height: 150px; margin-left: auto; margin-right: auto; " StartIcon="@Icons.Filled.PersonOutline" Link="user/dashboard">About</MudButton>
+        <MudButton Variant="Variant.Filled" Color="Color.Primary" Style="width: 190px; height: 190px; margin-left: auto; margin-right: auto; "  Link="user/dashboard"><MudIcon Icon="@Icons.Filled.PersonOutline" Style="font-size: 4rem;" />About</MudButton>
     </MudItem>
     <MudItem>
-        <MudButton Variant="Variant.Filled" Color="Color.Primary" Style="width: 150px; height: 150px; margin-left: auto; margin-right: auto; " StartIcon="@Icons.Filled.TableChart" Link="user/dashboard">Certificates</MudButton>
+        <MudButton Variant="Variant.Filled" Color="Color.Primary" Style="width: 190px; height: 190px; margin-left: auto; margin-right: auto; " Link="user/dashboard"><MudIcon Icon="@Icons.Filled.TableChart" Style="font-size: 4rem;" />Certificates</MudButton>
     </MudItem>
 </MudGrid>
 
 
 <MudGrid Justify="Justify.Center">
     <MudItem>
-        <MudButton Variant="Variant.Filled" Color="Color.Primary" Style="width: 150px; height: 150px; margin-left: auto; margin-right: auto; " Link="admin/dashboard" StartIcon="@Icons.Filled.People">Users</MudButton>
+        <MudButton Variant="Variant.Filled" Color="Color.Primary" Style="width: 190px; height: 190px; margin-left: auto; margin-right: auto; " Link="admin/dashboard"><MudIcon Icon="@Icons.Filled.People" Style="font-size: 4rem;" />Users</MudButton>
     </MudItem>
     <MudItem>
-        <MudButton Variant="Variant.Filled" Color="Color.Primary" Style="width: 150px; height: 150px; margin-left: auto; margin-right: auto; " Link="admin/dashboard" StartIcon="@Icons.Filled.Build">Administration</MudButton>
+        <MudButton Variant="Variant.Filled" Color="Color.Primary" Style="width: 190px; height: 190px; margin-left: auto; margin-right: auto; " Link="admin/dashboard"><MudIcon Icon="@Icons.Filled.Build" Style="font-size: 4rem;" />Administration</MudButton>
     </MudItem>
     <MudItem>
-        <MudButton Variant="Variant.Filled" Color="Color.Primary" Style="width: 150px; height: 150px; margin-left: auto; margin-right: auto; " Link="admin/dashboard" StartIcon="@Icons.Filled.MeetingRoom">Departments</MudButton>
+        <MudButton Variant="Variant.Filled" Color="Color.Primary" Style="width: 190px; height: 190px; margin-left: auto; margin-right: auto; " Link="admin/dashboard" ><MudIcon Icon="@Icons.Filled.MeetingRoom" Style="font-size: 4rem;" />Departments</MudButton>
     </MudItem>
     <MudItem>
-        <MudButton Variant="Variant.Filled" Color="Color.Primary" Style="width: 150px; height: 150px; margin-left: auto; margin-right: auto; " Link="admin/dashboard" StartIcon="@Icons.Filled.QueryStats">Statistics</MudButton>
+        <MudButton Variant="Variant.Filled" Color="Color.Primary" Style="width: 190px; height: 190px; margin-left: auto; margin-right: auto; " Link="admin/dashboard"><MudIcon Icon="@Icons.Filled.QueryStats" Style="font-size: 4rem;" />Statistics</MudButton>
     </MudItem>
 </MudGrid>
 
 
 <MudGrid Justify="Justify.Center">
     <MudItem>
-        <MudButton Variant="Variant.Filled" Color="Color.Primary" Style="width: 150px; height: 150px; margin-left: auto; margin-right: auto; " Link="admin/dashboard" StartIcon="@Icons.Filled.Category">Categories</MudButton>
+        <MudButton Variant="Variant.Filled" Color="Color.Primary" Style="width: 190px; height: 190px; margin-left: auto; margin-right: auto; " Link="admin/dashboard"><MudIcon Icon="@Icons.Filled.Category" Style="font-size: 4rem;" />Categories</MudButton>
     </MudItem>
     <MudItem>
-        <MudButton Variant="Variant.Filled" Color="Color.Primary" Style="width: 150px; height: 150px; margin-left: auto; margin-right: auto; " Link="admin/dashboard" StartIcon="@Icons.Filled.EventNote">Questions</MudButton>
+        <MudButton Variant="Variant.Filled" Color="Color.Primary" Style="width: 190px; height: 190px; margin-left: auto; margin-right: auto; " Link="admin/dashboard" ><MudIcon Icon="@Icons.Filled.EventNote" Style="font-size: 4rem;" />Questions</MudButton>
     </MudItem>
     <MudItem>
-        <MudButton Variant="Variant.Filled" Color="Color.Primary" Style="width: 150px; height: 150px; margin-left: auto; margin-right: auto; " Link="admin/dashboard" StartIcon="@Icons.Filled.Create">Cards</MudButton>
+        <MudButton Variant="Variant.Filled" Color="Color.Primary" Style="width: 190px; height: 190px; margin-left: auto; margin-right: auto; " Link="admin/dashboard"><MudIcon Icon="@Icons.Filled.Create" Style="font-size: 4rem;" />Cards</MudButton>
     </MudItem>
+
    
+
+
 </MudGrid>
 
 
