--- a/ProfileMatch.Components/User/UserAbout.razor
+++ b/ProfileMatch.Components/User/UserAbout.razor
@@ -1,7 +1,6 @@
 ﻿@page "/user/about"
 
-<MudGrid>
-
+<MudItem Class="d-flex justify-space-between">
     <MudItem xs="12" sm="8" md="8">
         <MudCard>
             <MudCardHeader>
@@ -27,10 +26,10 @@
             </MudCardActions>
         </MudCard>
     </MudItem>
-</MudGrid>
+    </MudItem>
 
 <br>
-
+<MudItem Class="d-flex">
 <MudExpansionPanels MultiExpansion="true">
     <MudExpansionPanel Text=@L["What is important to me at work"]>
         <MudListItem Text="This day everything happend. The quick, brown fox jumps over a lazy dog." IconColor="Color.Primary" Icon="@Icons.Filled.Bookmark" />
@@ -58,3 +57,4 @@
         <MudListItem Text="Single List Item" Icon="@Icons.Filled.Bookmark" IconColor="Color.Secondary" />
     </MudExpansionPanel>
 </MudExpansionPanels>
+</MudItem>
