--- a/ProfileMatch.Components/User/UserAccount.razor
+++ b/ProfileMatch.Components/User/UserAccount.razor
@@ -1,12 +1,7 @@
 ﻿@page "/user/account"
-<MudGrid>
-    <MudItem xs="12" sm="4" md="3">
+<MudItem Class="d-flex justify-space-between">
+    <MudItem xs="12" sm="4" md="3" >
         <MudCard>
-            <MudCardHeader>
-                <CardHeaderContent>
-                    <MudText>Public Profile</MudText>
-                </CardHeaderContent>
-            </MudCardHeader>
             <MudCardContent>
                 <div class="d-flex justify-center mb-4">
                     <MudAvatar Image="@CurrentUser?.PhotoPath" Style="height:100px; width:100px;">
@@ -19,12 +14,9 @@
                 <MudText Align="Align.Center">@CurrentUser?.FirstName @CurrentUser?.LastName</MudText>
                 <MudText Align="Align.Center">@CurrentUser?.JobTitle</MudText>
             </MudCardContent>
-            <MudCardActions Class="d-flex justify-center">
-                <MudButton OnClick="DeletePicture" Color="@AvatarButtonColor">@AvatarButtonText</MudButton>
-            </MudCardActions>
         </MudCard>
     </MudItem>
-    <MudItem xs="12" sm="8" md="9">
+    <MudItem xs="12" sm="8" md="8">
         <MudCard>
             <MudCardHeader>
                 <CardHeaderContent>
@@ -32,33 +24,11 @@
                 </CardHeaderContent>
             </MudCardHeader>
             <MudCardContent>
-                <MudGrid>
-                    <MudItem xs="12" md="6">
-                        <MudTextField @bind-Value="FirstName" Label="First Name" Variant="Variant.Outlined"></MudTextField>
-                    </MudItem>
-                    <MudItem xs="12" md="6">
-                        <MudTextField @bind-Value="LastName" Label="First Name" Variant="Variant.Outlined" />
-                    </MudItem>
-                    <MudItem xs="12" md="6">
-                        <MudTextField @bind-Value="JobTitle" Label="Job Title" Variant="Variant.Outlined" />
-                    </MudItem>
-                    <MudItem xs="12" md="6">
-                        <MudTextField @bind-Value="Email" Label="Email" Variant="Variant.Outlined" HelperText="Dont worry, we shall not spam!" InputType="InputType.Email" />
-                    </MudItem>
-                    <MudItem xs="12">
-                        <MudText>
-                            <b>Visible Only To Friends</b>
-                        </MudText>
-                        <MudText Typo="Typo.body2">
-                            Means that only your friends will be able to see your contact details.
-                        </MudText>
-                        <MudSwitch @bind-Checked="@FriendSwitch" Color="Color.Secondary" />
-                    </MudItem>
-                </MudGrid>
+                
             </MudCardContent>
             <MudCardActions Class="pb-4 pl-4">
                 <MudButton Variant="Variant.Filled" Color="Color.Primary" Class="ml-auto" @onclick="@(() => SaveChanges("Profile details saved", Severity.Success))">Save Changes</MudButton>
             </MudCardActions>
         </MudCard>
     </MudItem>
-</MudGrid>
+    </MudItem>
