--- a/ProfileMatch.Sites/UserDashboard.razor
+++ b/ProfileMatch.Sites/UserDashboard.razor
@@ -1,10 +1,11 @@
 ﻿@page "/user/dashboard"
+@page "/"
     <AuthorizeView>
         <Authorized>
             <MudText Typo="Typo.h5" Color="Color.Primary" Class="mb-4">@L["User Dashboard"]</MudText>
             <MudTabs Elevation="1" Rounded="true" PanelClass="mt-6">
-                <MudTabPanel Text=@L["Surveys"] Icon="@Icons.Filled.FactCheck"><UserQuestionList /></MudTabPanel>
                 <MudTabPanel Text=@L["Account"] Icon="@Icons.Filled.PersonOutline"><UserAccount /></MudTabPanel>
+                <MudTabPanel Text=@L["Surveys"] Icon="@Icons.Filled.FactCheck"><UserQuestionList /></MudTabPanel>
                 <MudTabPanel Text=@L["About"] Icon="@Icons.Filled.PersonOutline"><UserAbout /></MudTabPanel>
                 <MudTabPanel Text=@L["Certificates"] Icon="@Icons.Filled.TableChart"><UserCertList /></MudTabPanel>
             </MudTabs>
