--- a/ProfileMatch.Sites/AdminDashboard.razor
+++ b/ProfileMatch.Sites/AdminDashboard.razor
@@ -13,6 +13,7 @@
             </MudTabPanel>
             <MudTabPanel Text=@L["Categories"]><AdminCategoryList /></MudTabPanel>
             <MudTabPanel Text=@L["Questions"]><AdminQuestionList /></MudTabPanel>
+            <MudTabPanel Text=@L["Notes"]><AdminNoteList /></MudTabPanel>
             <MudTabPanel Text=@L["Cards"]><AdminCards /></MudTabPanel>
         </MudTabs>
     </Authorized>
