--- a/ProfileMatch.Sites/UserDashboard.razor
+++ b/ProfileMatch.Sites/UserDashboard.razor
@@ -5,6 +5,7 @@
             <MudText Typo="Typo.h5" Color="Color.Primary" Class="mb-4">@L["User Dashboard"]</MudText>
             <MudTabs Elevation="1" Rounded="true" PanelClass="mt-6">
                 <MudTabPanel Text=@L["Account"] Icon="@Icons.Filled.PersonOutline"><UserAccount /></MudTabPanel>
+                <MudTabPanel Text=@L["User Notes"] Icon="@Icons.Filled.FactCheck"><UserNoteList /></MudTabPanel>
                 <MudTabPanel Text=@L["Surveys"] Icon="@Icons.Filled.FactCheck"><UserQuestionList /></MudTabPanel>
                 <MudTabPanel Text=@L["Certificates"] Icon="@Icons.Filled.TableChart"><UserCertList /></MudTabPanel>
             </MudTabs>
