Converted UserManager and RoleManager to generic repository

--- a/ProfileMatch.Components/User/UserAccount.razor
+++ b/ProfileMatch.Components/User/UserAccount.razor
@@ -1,4 +1,4 @@
-﻿@page "/user/account"
+﻿@page "/user/account/{UserId}"
 <MudItem Class="d-flex justify-space-between">
     <MudItem xs="12" sm="4" md="3" >
         <MudCard>
