--- a/ProfileMatch.Components/_Imports.razor
+++ b/ProfileMatch.Components/_Imports.razor
@@ -24,3 +24,5 @@
 @using Microsoft.Extensions.Localization
 @using System.Globalization
 @using Microsoft.AspNetCore.Localization
+@using System.IO;
+@using Microsoft.Extensions.Configuration
