--- a/ProfileMatch.Components/Layout/RedirectToLogin.razor
+++ b/ProfileMatch.Components/Layout/RedirectToLogin.razor
@@ -2,8 +2,7 @@
 
 @code {
 
-    [CascadingParameter]
-    private Task<AuthenticationState> AuthenticationStateTask { get; set; }
+    [CascadingParameter] private Task<AuthenticationState> AuthenticationStateTask { get; set; }
 
     protected override async Task OnInitializedAsync()
     {
