--- a/ProfileMatch.Components/User/UserAccount.razor
+++ b/ProfileMatch.Components/User/UserAccount.razor
@@ -1,5 +1,5 @@
 ﻿@page "/user/account/{UserId}"
-
+Hello world
 <MudItem Class="d-flex justify-space-between">
     <MudItem xs="12" sm="4" md="3">
         <MudCard>
