--- a/ProfileMatch.Web/App.razor
+++ b/ProfileMatch.Web/App.razor
@@ -1,5 +1,5 @@
         <CascadingAuthenticationState>
-<Router AppAssembly="@typeof(Program).Assembly" PreferExactMatches="@true" AdditionalAssemblies="new[] { typeof(ProfileMatch.Sites.AdminDashboard).Assembly }">
+<Router AppAssembly="@typeof(Program).Assembly" PreferExactMatches="@true" AdditionalAssemblies="new[] { typeof(ProfileMatch.Sites.AdminDashboard).Assembly, typeof(ProfileMatch.Components.User.UserAccount).Assembly }">
     <Found Context="routeData">
         <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)">
             <NotAuthorized>
