--- a/ProfileMatch.Components/Admin/AdminPeopleList.razor
+++ b/ProfileMatch.Components/Admin/AdminPeopleList.razor
@@ -36,7 +36,7 @@ else
                 @*}*@
             </MudTd>
             <MudTd DataLabel="">
-                <MudFab Color="Color.Primary" Icon="@Icons.Material.Filled.Person" Size="Size.Small" IconSize="Size.Small" />
+                <MudFab Color="Color.Primary" OnClick="@(()=>ShowProfile(context))" Icon="@Icons.Material.Filled.Person" Size="Size.Small" IconSize="Size.Small" />
             </MudTd>
         </RowTemplate>
         <PagerContent>
